2016-01-12  Brady Eidson  <beidson@apple.com>

        Modern IDB: storage/indexeddb/dont-wedge.html is flaky.
        https://bugs.webkit.org/show_bug.cgi?id=152892

        Reviewed by Alex Christensen.

        * platform/mac-wk1/TestExpectations:

2016-01-12  Antti Koivisto  <antti@apple.com>

        Don't reuse memory cache entries with different charset
        https://bugs.webkit.org/show_bug.cgi?id=110031

        Reviewed by Andreas Kling.

        * fast/loader/cache-encoding-expected.txt: Added.
        * fast/loader/cache-encoding.html: Added.
        * fast/loader/resources/success.js: Added.

2016-01-12  Ryan Haddad  <ryanhaddad@apple.com>

        Marking inspector/model/scope-chain-node.html as flaky on Mac debug
        https://bugs.webkit.org/show_bug.cgi?id=153018

        Unreviewed test gardening.

        * platform/mac/TestExpectations:

2016-01-12  Ryan Haddad  <ryanhaddad@apple.com>

        Marking inspector/script-profiler/event-type-Other.html as flaky on Mac
        https://bugs.webkit.org/show_bug.cgi?id=153016

        Unreviewed test gardening.

        * platform/mac/TestExpectations:

2016-01-12  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed GTK+ gardening. Rebaseline test results after r194847.

        Before r194847 we were always taking the separator of combo boxes
        into account when calculating the size of menu list buttons, even
        when we didn't render the separator. In r194847 we removed all the
        code to deal with separators in combo boxes. Also, since r194847
        we are correctly adding the padding between the icon and the text
        in search fileds.

        * platform/gtk/css3/selectors3/html/css3-modsel-161-expected.txt:
        * platform/gtk/css3/selectors3/xhtml/css3-modsel-161-expected.txt:
        * platform/gtk/css3/selectors3/xml/css3-modsel-161-expected.txt:
        * platform/gtk/editing/pasteboard/4641033-expected.txt: